// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`token Comma 1`] = `
Array [
  Object {
    "image": ",",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Comma",
      "tokenTypeIdx": 2,
    },
    "tokenTypeIdx": 2,
  },
]
`;

exports[`token CommentStart 1`] = `
Array [
  Object {
    "image": "#",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "#",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "CommentStart",
      "tokenTypeIdx": 7,
    },
    "tokenTypeIdx": 7,
  },
]
`;

exports[`token Dq 1`] = `
Array [
  Object {
    "image": "\\"",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "\\"",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Dq",
      "tokenTypeIdx": 8,
    },
    "tokenTypeIdx": 8,
  },
]
`;

exports[`token InlineTableEnd 1`] = `
Array [
  Object {
    "image": "}",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "}",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "InlineTableEnd",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
]
`;

exports[`token InlineTableStart 1`] = `
Array [
  Object {
    "image": "{",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "{",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "InlineTableStart",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
]
`;

exports[`token KeyValueSeparator 1`] = `
Array [
  Object {
    "image": "=",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "=",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "KeyValueSeparator",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
]
`;

exports[`token LSquare 1`] = `
Array [
  Object {
    "image": "[",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "[",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "LSquare",
      "tokenTypeIdx": 5,
    },
    "tokenTypeIdx": 5,
  },
]
`;

exports[`token Period 1`] = `
Array [
  Object {
    "image": ".",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ".",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Period",
      "tokenTypeIdx": 3,
    },
    "tokenTypeIdx": 3,
  },
]
`;

exports[`token RSquare 1`] = `
Array [
  Object {
    "image": "]",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "]",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "RSquare",
      "tokenTypeIdx": 6,
    },
    "tokenTypeIdx": 6,
  },
]
`;

exports[`token Sq 1`] = `
Array [
  Object {
    "image": "'",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "'",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Sq",
      "tokenTypeIdx": 9,
    },
    "tokenTypeIdx": 9,
  },
]
`;

exports[`token TOMLLexer 1`] = `
Array [
  Object {
    "endColumn": 5,
    "endLine": 2,
    "endOffset": 5,
    "image": "plain",
    "startColumn": 1,
    "startLine": 2,
    "startOffset": 1,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 7,
    "endLine": 2,
    "endOffset": 7,
    "image": "=",
    "startColumn": 7,
    "startLine": 2,
    "startOffset": 7,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "=",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "KeyValueSeparator",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
  Object {
    "endColumn": 9,
    "endLine": 2,
    "endOffset": 9,
    "image": "1",
    "startColumn": 9,
    "startLine": 2,
    "startOffset": 9,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 4,
    "endLine": 3,
    "endOffset": 14,
    "image": "with",
    "startColumn": 1,
    "startLine": 3,
    "startOffset": 11,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 5,
    "endLine": 3,
    "endOffset": 15,
    "image": ".",
    "startColumn": 5,
    "startLine": 3,
    "startOffset": 15,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ".",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Period",
      "tokenTypeIdx": 3,
    },
    "tokenTypeIdx": 3,
  },
  Object {
    "endColumn": 8,
    "endLine": 3,
    "endOffset": 18,
    "image": "dot",
    "startColumn": 6,
    "startLine": 3,
    "startOffset": 16,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 10,
    "endLine": 3,
    "endOffset": 20,
    "image": "=",
    "startColumn": 10,
    "startLine": 3,
    "startOffset": 20,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "=",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "KeyValueSeparator",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
  Object {
    "endColumn": 12,
    "endLine": 3,
    "endOffset": 22,
    "image": "2",
    "startColumn": 12,
    "startLine": 3,
    "startOffset": 22,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 1,
    "endLine": 4,
    "endOffset": 24,
    "image": "\\"",
    "startColumn": 1,
    "startLine": 4,
    "startOffset": 24,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "\\"",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Dq",
      "tokenTypeIdx": 8,
    },
    "tokenTypeIdx": 8,
  },
  Object {
    "endColumn": 7,
    "endLine": 4,
    "endOffset": 30,
    "image": "double",
    "startColumn": 2,
    "startLine": 4,
    "startOffset": 25,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 8,
    "endLine": 4,
    "endOffset": 31,
    "image": ".",
    "startColumn": 8,
    "startLine": 4,
    "startOffset": 31,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ".",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Period",
      "tokenTypeIdx": 3,
    },
    "tokenTypeIdx": 3,
  },
  Object {
    "endColumn": 14,
    "endLine": 4,
    "endOffset": 37,
    "image": "quoted",
    "startColumn": 9,
    "startLine": 4,
    "startOffset": 32,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 15,
    "endLine": 4,
    "endOffset": 38,
    "image": "\\"",
    "startColumn": 15,
    "startLine": 4,
    "startOffset": 38,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "\\"",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Dq",
      "tokenTypeIdx": 8,
    },
    "tokenTypeIdx": 8,
  },
  Object {
    "endColumn": 17,
    "endLine": 4,
    "endOffset": 40,
    "image": "=",
    "startColumn": 17,
    "startLine": 4,
    "startOffset": 40,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "=",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "KeyValueSeparator",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
  Object {
    "endColumn": 19,
    "endLine": 4,
    "endOffset": 42,
    "image": "3",
    "startColumn": 19,
    "startLine": 4,
    "startOffset": 42,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 1,
    "endLine": 6,
    "endOffset": 45,
    "image": "[",
    "startColumn": 1,
    "startLine": 6,
    "startOffset": 45,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "[",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "LSquare",
      "tokenTypeIdx": 5,
    },
    "tokenTypeIdx": 5,
  },
  Object {
    "endColumn": 6,
    "endLine": 6,
    "endOffset": 50,
    "image": "table",
    "startColumn": 2,
    "startLine": 6,
    "startOffset": 46,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 7,
    "endLine": 6,
    "endOffset": 51,
    "image": "]",
    "startColumn": 7,
    "startLine": 6,
    "startOffset": 51,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "]",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "RSquare",
      "tokenTypeIdx": 6,
    },
    "tokenTypeIdx": 6,
  },
  Object {
    "endColumn": 5,
    "endLine": 7,
    "endOffset": 57,
    "image": "plain",
    "startColumn": 1,
    "startLine": 7,
    "startOffset": 53,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 7,
    "endLine": 7,
    "endOffset": 59,
    "image": "=",
    "startColumn": 7,
    "startLine": 7,
    "startOffset": 59,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "=",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "KeyValueSeparator",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
  Object {
    "endColumn": 9,
    "endLine": 7,
    "endOffset": 61,
    "image": "1",
    "startColumn": 9,
    "startLine": 7,
    "startOffset": 61,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 4,
    "endLine": 8,
    "endOffset": 66,
    "image": "with",
    "startColumn": 1,
    "startLine": 8,
    "startOffset": 63,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 5,
    "endLine": 8,
    "endOffset": 67,
    "image": ".",
    "startColumn": 5,
    "startLine": 8,
    "startOffset": 67,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ".",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Period",
      "tokenTypeIdx": 3,
    },
    "tokenTypeIdx": 3,
  },
  Object {
    "endColumn": 8,
    "endLine": 8,
    "endOffset": 70,
    "image": "dot",
    "startColumn": 6,
    "startLine": 8,
    "startOffset": 68,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 10,
    "endLine": 8,
    "endOffset": 72,
    "image": "=",
    "startColumn": 10,
    "startLine": 8,
    "startOffset": 72,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "=",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "KeyValueSeparator",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
  Object {
    "endColumn": 12,
    "endLine": 8,
    "endOffset": 74,
    "image": "2",
    "startColumn": 12,
    "startLine": 8,
    "startOffset": 74,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 1,
    "endLine": 9,
    "endOffset": 76,
    "image": "\\"",
    "startColumn": 1,
    "startLine": 9,
    "startOffset": 76,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "\\"",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Dq",
      "tokenTypeIdx": 8,
    },
    "tokenTypeIdx": 8,
  },
  Object {
    "endColumn": 7,
    "endLine": 9,
    "endOffset": 82,
    "image": "double",
    "startColumn": 2,
    "startLine": 9,
    "startOffset": 77,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 8,
    "endLine": 9,
    "endOffset": 83,
    "image": ".",
    "startColumn": 8,
    "startLine": 9,
    "startOffset": 83,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ".",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Period",
      "tokenTypeIdx": 3,
    },
    "tokenTypeIdx": 3,
  },
  Object {
    "endColumn": 14,
    "endLine": 9,
    "endOffset": 89,
    "image": "quoted",
    "startColumn": 9,
    "startLine": 9,
    "startOffset": 84,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 15,
    "endLine": 9,
    "endOffset": 90,
    "image": "\\"",
    "startColumn": 15,
    "startLine": 9,
    "startOffset": 90,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "\\"",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Dq",
      "tokenTypeIdx": 8,
    },
    "tokenTypeIdx": 8,
  },
  Object {
    "endColumn": 17,
    "endLine": 9,
    "endOffset": 92,
    "image": "=",
    "startColumn": 17,
    "startLine": 9,
    "startOffset": 92,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "=",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "KeyValueSeparator",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
  Object {
    "endColumn": 19,
    "endLine": 9,
    "endOffset": 94,
    "image": "3",
    "startColumn": 19,
    "startLine": 9,
    "startOffset": 94,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 1,
    "endLine": 11,
    "endOffset": 97,
    "image": "[",
    "startColumn": 1,
    "startLine": 11,
    "startOffset": 97,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "[",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "LSquare",
      "tokenTypeIdx": 5,
    },
    "tokenTypeIdx": 5,
  },
  Object {
    "endColumn": 6,
    "endLine": 11,
    "endOffset": 102,
    "image": "table",
    "startColumn": 2,
    "startLine": 11,
    "startOffset": 98,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 7,
    "endLine": 11,
    "endOffset": 103,
    "image": ".",
    "startColumn": 7,
    "startLine": 11,
    "startOffset": 103,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ".",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Period",
      "tokenTypeIdx": 3,
    },
    "tokenTypeIdx": 3,
  },
  Object {
    "endColumn": 10,
    "endLine": 11,
    "endOffset": 106,
    "image": "dot",
    "startColumn": 8,
    "startLine": 11,
    "startOffset": 104,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 11,
    "endLine": 11,
    "endOffset": 107,
    "image": "]",
    "startColumn": 11,
    "startLine": 11,
    "startOffset": 107,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "]",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "RSquare",
      "tokenTypeIdx": 6,
    },
    "tokenTypeIdx": 6,
  },
  Object {
    "endColumn": 5,
    "endLine": 12,
    "endOffset": 113,
    "image": "plain",
    "startColumn": 1,
    "startLine": 12,
    "startOffset": 109,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 7,
    "endLine": 12,
    "endOffset": 115,
    "image": "=",
    "startColumn": 7,
    "startLine": 12,
    "startOffset": 115,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "=",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "KeyValueSeparator",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
  Object {
    "endColumn": 9,
    "endLine": 12,
    "endOffset": 117,
    "image": "1",
    "startColumn": 9,
    "startLine": 12,
    "startOffset": 117,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 4,
    "endLine": 13,
    "endOffset": 122,
    "image": "with",
    "startColumn": 1,
    "startLine": 13,
    "startOffset": 119,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 5,
    "endLine": 13,
    "endOffset": 123,
    "image": ".",
    "startColumn": 5,
    "startLine": 13,
    "startOffset": 123,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ".",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Period",
      "tokenTypeIdx": 3,
    },
    "tokenTypeIdx": 3,
  },
  Object {
    "endColumn": 8,
    "endLine": 13,
    "endOffset": 126,
    "image": "dot",
    "startColumn": 6,
    "startLine": 13,
    "startOffset": 124,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 10,
    "endLine": 13,
    "endOffset": 128,
    "image": "=",
    "startColumn": 10,
    "startLine": 13,
    "startOffset": 128,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "=",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "KeyValueSeparator",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
  Object {
    "endColumn": 12,
    "endLine": 13,
    "endOffset": 130,
    "image": "2",
    "startColumn": 12,
    "startLine": 13,
    "startOffset": 130,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 1,
    "endLine": 14,
    "endOffset": 132,
    "image": "\\"",
    "startColumn": 1,
    "startLine": 14,
    "startOffset": 132,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "\\"",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Dq",
      "tokenTypeIdx": 8,
    },
    "tokenTypeIdx": 8,
  },
  Object {
    "endColumn": 7,
    "endLine": 14,
    "endOffset": 138,
    "image": "double",
    "startColumn": 2,
    "startLine": 14,
    "startOffset": 133,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 8,
    "endLine": 14,
    "endOffset": 139,
    "image": ".",
    "startColumn": 8,
    "startLine": 14,
    "startOffset": 139,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ".",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Period",
      "tokenTypeIdx": 3,
    },
    "tokenTypeIdx": 3,
  },
  Object {
    "endColumn": 14,
    "endLine": 14,
    "endOffset": 145,
    "image": "quoted",
    "startColumn": 9,
    "startLine": 14,
    "startOffset": 140,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
  Object {
    "endColumn": 15,
    "endLine": 14,
    "endOffset": 146,
    "image": "\\"",
    "startColumn": 15,
    "startLine": 14,
    "startOffset": 146,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "\\"",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "Dq",
      "tokenTypeIdx": 8,
    },
    "tokenTypeIdx": 8,
  },
  Object {
    "endColumn": 17,
    "endLine": 14,
    "endOffset": 148,
    "image": "=",
    "startColumn": 17,
    "startLine": 14,
    "startOffset": 148,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "=",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "KeyValueSeparator",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
  Object {
    "endColumn": 19,
    "endLine": 14,
    "endOffset": 150,
    "image": "3",
    "startColumn": 19,
    "startLine": 14,
    "startOffset": 150,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /\\[0-9a-zA-Z_-\\]\\+/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "tokenName": "BareKey",
      "tokenTypeIdx": 15,
    },
    "tokenTypeIdx": 15,
  },
]
`;
